--- a/style.css
+++ b/style.css
@@ -4,3 +4,63 @@
     padding: 0;
     box-sizing: border-box;
 }
+
+#container{
+    background-color: brown;
+    height: 100vh;
+}
+
+#title{
+    margin-bottom: 30px;
+    font-size: 60px;
+    font-weight: 600;
+}
+
+#card-main{
+    background-color: white;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    font-size: 15px;
+    font-weight: 600;
+    border-radius: 10px;
+    margin: 10px 0;
+}
+
+#number-input{
+    margin-top: 50px;
+}
+
+#button-submit{
+    margin-top: 20px;
+}
+
+.card-body{
+    padding-top: 0 !important;
+}
+
+#row-none{
+    display: none;
+}
+
+
+#risultato{
+    text-align: center;
+    border-radius: 10px;
+    background-color: white;
+    padding: 30px;
+    margin: 20px;
+    display: none;
+}
+
+.space{
+    display: flex;
+    justify-content: space-between;
+}
+
+#indovinato{
+    background-color: green;
+    padding: 20px;
+    border-radius: 50%;
+    margin: 0 5px;
+}
